Fixed chatbox overflow in CSS

--- a/src/components/layout/chat/chat.css
+++ b/src/components/layout/chat/chat.css
@@ -112,7 +112,7 @@
 }
 .chat-scroll::-webkit-scrollbar {
   width: 5px;
-  background-color: green;
+  /* background-color: green; */
 }
 .chat-scroll::-webkit-scrollbar-thumb {
   background-color: #484d79;
@@ -132,7 +132,7 @@
 .system-message {
   color: rgb(214, 214, 214);
   background: -webkit-linear-gradient(-45deg, #bd6294 0%, #8140b6 100%);
-  /* background-color: #291d52; */
+  background-color: #291d52;
   /* border-left: 6px solid purple; */
 }
 
@@ -144,6 +144,7 @@
   display: flex;
   flex-direction: column;
   height: 100%;
+  margin-bottom: 51px;
 }
 
 .chat-background {
