--- a/src/styles/common.css
+++ b/src/styles/common.css
@@ -94,5 +94,5 @@
 .modal {
   padding: 24px;
   border-radius: 24px;
-  background-color: cyan;
+  background: -webkit-linear-gradient(-45deg, #954ed6 0%, #009bee 100%);
 }
